Made changes to suggestions and hotspots to fix spacing error

--- a/static/css/PiratesSpotlightStyles.css
+++ b/static/css/PiratesSpotlightStyles.css
@@ -64,6 +64,12 @@ body #hotspots .header {
   color: #592A8A;
   padding: 0px 0px 20px 90px;
 }
+body #suggestions .header {
+  font-size: 14;
+  font-family: "Oswald", sans-serif;
+  color: #592A8A;
+  padding: 0px 0px 20px 90px;
+}
 .col-sm-6 {
   float: left;
   width: 50%;
@@ -342,11 +348,12 @@ div.gallery:hover {
 }
 div.gallery img {
   width: 100%;
-  height: auto;
+  height: 350px;
 }
 div.desc {
   padding: 15px;
   text-align: center;
+  height: 75px;
 }
 * {
   box-sizing: border-box;
